deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: sss-deployment 
spec:
  replicas: 5
  selector: 
    matchLabels: 
      tier: frontend
  template: 
    metadata: 
      labels: 
        tier: frontend
    spec: 
      containers: 
      -  name: nginx
         image: nginx:1.17.3
