livenessprobe.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: liveness
spec: 
  containers: 
  - name: liveness
    image: ubuntu
    tty: true
    livenessProbe: 
      exec: 
        command: 
        - service
        - nginx
        - status
      initialDelaySeconds: 20 
      periodSeconds: 5
      timeoutSeconds: 2



      #OR 
      # exec:
      #   command: 
      #   - cat
      #   - /usr/share/nginx/html/index.html
