pod-volume.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: demopod-volume
spec: 
  containers: 
  - name: nginx
    image: nginx:1.17.3
    volumeMounts: 
    -  mountPath: /data
       name: first-volume
       readOnly: true
  volumes: 
  - name: first-volume
    hostPath: 
       path: /mydata
       type: Directory
