pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
spec: 
  containers: 
  - name: nginx
    image: nginx:1.17.3
    ports: 
    - containerPort: 80
      protocol: TCP
