requests-limits.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginxwebserver
spec: 
  containers: 
  - name: nginx
    image: nginx:1.17.3
    resources: 
      requests:
        memory: "64Mi"
        cpu: "0.5"
      limits: 
        memory: "128Mi"
        cpu: "1"
