secret-env.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: secretmount
spec: 
  containers: 
  - name: secretmount
    image: nginx:1.17.3
  restartPolicy: Never
