secretpod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: secretmount
spec: 
  containers: 
  - name: secretmount
    image: nginx:1.17.3
    volumeMounts: 
    -  name: foo
       mountPath: "/etc/foo"
       readOnly: true
  volumes:
  -  name: foo
     secret: 
       secretName: firstsecret
