toleration.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: sss-toleration
spec:
  replicas: 5
  selector: 
    matchLabels: 
      tier: frontend
  template: 
    metadata: 
      labels: 
        tier: frontend
    spec: 
      containers: 
      -  name: nginx
         image: nginx:1.17.3
      tolerations: 
      - key: "key"
        operator: "Exists"
        effect: "NoSchedule"
