endpoint.yaml
apiVersion: v1 
kind: Endpoints
metadata: 
  name: sss-service
subsets: 
 - addresses: 
   - ip: "10.1.0.68"                                 #IP addreses of the pods 
   ports: 
    - port: 80
