service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nginx-service
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: app-nginx               # Needs to find the pods that match this label
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx-deployment
  labels: 
    servers: dmm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-nginx           # Both of the object (Incuding the above selector) are selcting the objects(pods) based on the match 
  template:
    metadata:
      labels:
        app: app-nginx         # this needs to be here to get selected
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.3
        ports:
        - containerPort: 80
