sss-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: sss-service
spec: 
  type: ClusterIP
  ports: 
  - port: 8080
    targetPort: 80
